--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Simple Gallery</string>
+    <string name="app_name">Gallery</string>
     <string name="app_launcher_name">Thư viện</string>
     <string name="edit">Biên tập</string>
     <string name="open_camera">Mở Camera</string>
